@@ -1,3 +1,7 @@
+shmuel 2024-10-03 22:53:54+03:00 - build 852
+
+1. LuaFAR: refactoring.
+
 shmuel 2024-10-03 22:41:21+03:00 - build 851
 
 1. LuaFAR: refactoring.
